--- a/KeebistLT/Readme
+++ b/KeebistLT/Readme
@@ -1,1 +1,11 @@
+--Readme--
+The Keebist Lite is a 6x15 RGB ortholinear Keyboard which is compatible with both cherry MX and Kailh Choc keys. This version comes with an integrated controller and features robust ESD protection for the components. 
 
+Required Parts to finish:
+
+x82 1N4148 Diodes
+78-81ish MX or Choc keys
+USB-C cable
+x9 m2 screws
+x5 m2 standoffs (for flat case, cnc has them included)
+Case Feet: https://kbdfans.com/products/anodized-cnc-aluminum-feet-1pair
