--- a/KeebistLT/Readme
+++ b/KeebistLT/Readme
@@ -7,5 +7,5 @@ x82 1N4148 Diodes
 78-81ish MX or Choc keys
 USB-C cable
 x9 m2 screws
-x5 m2 standoffs (for flat case, cnc has them included)
+x5-9 m2 standoffs (The cnc case has these included)
 Case Feet: https://kbdfans.com/products/anodized-cnc-aluminum-feet-1pair
